# NavKit

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  License.rtf  NavKit.cpp  NavKit.h  README.md  vcpkg.json
.github/workflows/: build.yml
docs/: mainpage.md  rider_instructions.md
include/ConcurrentQueue/: ConcurrentQueue.h
include/Editor/: JsonHelpers.h
include/NavKit/: Airg.h  FileUtil.h  GameConnection.h  Glacier2Obj.h  Gui.h  InputHandler.h  Logger.h  NavKit.h  NavKitConfig.h  NavKitConfig.h.in  Navp.h  Obj.h  PfBoxes.h  ReasoningGrid.h  Renderer.h  Resource.h  SceneExtract.h  VisionData.h
include/NavKit/adapter/: RecastAdapter.h
include/NavKit/model/: CollisionMesh.h  Json.h  Nav.h  PfBoxes.h  ReasoningGrid.h  VisionData.h  ZPathfinding.h
include/NavKit/module/: Airg.h  GameConnection.h  Grid.h  Gui.h  InputHandler.h  Logger.h  Menu.h  NavKitSettings.h  Navp.h  Obj.h  PersistedSettings.h  Renderer.h  Rpkg.h  Scene.h  SceneExtract.h  SceneMesh.h  Settings.h
include/NavKit/render/: Mesh.h  Model.h  Shader.h
include/NavKit/util/: CommandRunner.h  ErrorHandler.h  FileUtil.h  GridGenerator.h  Math.h  Pathfinding.h  UpdateChecker.h
include/NavWeakness/: NavPower.h  NavWeakness.h  NavWeakness.lib  Vec3.h
include/QuickDigest/: quickdigest5.hpp
include/RecastDemo/: InputGeom.h  MeshLoaderObj.h  Sample.h  SampleInterfaces.h  Sample_TileMesh.h
include/ResourceLib/: ResourceLib.h
include/ResourceLib_HM3/Util/: Base64.h  BinaryStreamReader.h  BinaryStreamWriter.h  PortableIntrinsics.h
include/ResourceLib_HM3/ZHM/: Hash.h  TArray.h  THashMap.h  TMap.h  TPair.h  ZEncryptedString.h  ZHMArenas.h  ZHMCustomProperties.h  ZHMCustomTypes.h  ZHMEquality.h  ZHMInt.h  ZHMPrimitives.h  ZHMPtr.h  ZHMSerializer.h  ZHMTypeInfo.h  ZRepositoryID.h  ZString.h  ZVariant.h
include/glacier2obj/: glacier2obj.h
include/navkit-rpkg-lib/: navkit-rpkg-lib.h
lib/Debug/: NavWeakness.lib  ResourceLib_HM3.lib  glacier2obj.dll.lib  navkit_rpkg_lib.dll.lib  nfd.lib
lib/Release/: NavWeakness.lib  ResourceLib_HM3.lib  glacier2obj.dll.lib  navkit_rpkg_lib.dll.lib
src/: Airg.cpp  CMakeLists.txt  FileUtil.cpp  GameConnection.cpp  Glacier2Obj.cpp  Gui.cpp  InputHandler.cpp  Logger.cpp  NavKit.cpp  NavKit.rc  Navp.cpp  Obj.cpp  PfBoxes.cpp  ReasoningGrid.cpp  Renderer.cpp  SceneExtract.cpp  Updater.cpp  VisionData.cpp
src/RecastDemo/: InputGeom.cpp  PerfTimer.cpp  Sample.cpp  SampleInterfaces.cpp  Sample_SoloMesh.cpp  imgui.cpp  imguiRenderGL.cpp
src/adapter/: RecastAdapter.cpp
src/model/: Json.cpp  PfBoxes.cpp  ReasoningGrid.cpp  VisionData.cpp  ZPathfinding.cpp
src/module/: Airg.cpp  GameConnection.cpp  Grid.cpp  Gui.cpp  InputHandler.cpp  Logger.cpp  Menu.cpp  NavKitSettings.cpp  Navp.cpp  Obj.cpp  PersistedSettings.cpp  Renderer.cpp  Rpkg.cpp  Scene.cpp  SceneExtract.cpp  SceneMesh.cpp  Settings.cpp
src/render/: Mesh.cpp  Model.cpp  Shader.cpp
src/resource/: Glacier2Obj.py  NavKit.ini  fragment.glsl  glacier2obj.py  hash_list_filtered.txt  res.blend  vertex.glsl
src/util/: CommandRunner.cpp  ErrorHandler.cpp  FileUtil.cpp  GridGenerator.cpp  Math.cpp  Pathfinding.cpp  UpdateChecker.cpp
tests/: CMakeLists.txt  tests.cpp
tests/resources/: rectangles.navp  triangles.navp
wix/: Package.wxs  heat_exclude_navkit.xslt
